# Axum

./: .gitignore  LICENSE  README.md  docker-compose.yaml  init.sql
.github/workflows/: build-deploy.yaml
application/: .env  Cargo.toml
application/src/: lib.rs  main.rs
application/src/routes/: create_task.rs  custom_json_extractor.rs  delete_task.rs  get_tasks.rs  guard.rs  mod.rs  partial_update_task.rs  update_tasks.rs  users.rs  validate_with_serde.rs
application/src/utils/: app_error.rs  jwt.rs
section_02/: Cargo.toml
section_02/src/: main.rs
section_02/src/router/: mod.rs
section_03/: Cargo.toml
section_03/src/: main.rs
section_03/src/extractor/: message.rs  mod.rs
section_03/src/router/: routes.rs
section_04/: Cargo.toml
section_04/src/: main.rs
section_04/src/extractor/: paths.rs
section_04/src/router/: routes.rs
section_05/: Cargo.toml
section_05/src/: main.rs
section_05/src/extractor/: paths.rs
section_05/src/router/: routes.rs
section_06/: Cargo.toml
section_06/src/: main.rs
section_06/src/extractor/: paths.rs
section_06/src/router/: routes.rs
section_07/: Cargo.toml
section_07/src/: main.rs
section_07/src/extractor/: mod.rs  paths.rs
section_07/src/router/: routes.rs
section_08/: Cargo.toml
section_08/src/: lib.rs  main.rs
section_08/src/router/: routes.rs
section_09/: Cargo.toml
section_09/src/: lib.rs  main.rs
section_09/src/extractor/: paths.rs
section_09/src/router/: routes.rs
section_10/: Cargo.toml
section_10/src/: lib.rs  main.rs
section_10/src/extractor/: mod.rs  paths.rs
section_10/src/middleware/: custom_header.rs  mod.rs
section_11/: Cargo.toml
section_11/src/: lib.rs  main.rs
section_12/: Cargo.toml
section_12/src/: lib.rs  main.rs
section_13/: Cargo.toml
section_13/src/: main.rs
section_14/: Cargo.toml
section_14/src/: lib.rs  main.rs
section_14/src/router/: routes.rs
section_15/: Cargo.toml
section_15/src/: main.rs
section_16/: Cargo.toml
section_16/src/: main.rs
section_17/: Cargo.toml
section_17/src/: lib.rs  main.rs
section_17/src/connection/: conn_seaorm.rs
section_17/src/query/: sea_orm.rs  sqlx.rs
section_17/src/router/: sea_orm.rs  sqlx.rs
section_18/: Cargo.toml
section_18/src/: main.rs
section_19/: Cargo.toml
section_19/src/: main.rs
section_20/: Cargo.toml  README.md
section_20/src/: main.rs
section_21/: Cargo.toml  README.md
section_22/: Cargo.toml
section_22/src/: main.rs
section_23/: Cargo.toml
section_23/src/query/: mod.rs  sea_orm.rs  sqlx.rs
section_23/src/router/: sea_orm.rs  sqlx.rs
section_24/src/: main.rs
section_25/: Cargo.toml
section_25/src/: main.rs
src/: main.rs
(+47 files in other folders)
