[package]
name = "section_06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
