[package]
name = "section_17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "0.10.5", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.28.2", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.1", features = ["cors"] }